--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,9 +1,9 @@
 {
   "name": "CraftTab",
-  "description": "Chrome Extension Starter",
+  "description": "CraftTab makes your startpage your productivity booster",
   "version": "1.0.0",
   "manifest_version": 3,
-  "homepage_url": "https://github.com/avivharuzi/chrome-extension-starter",
+  "homepage_url": "https://github.com/Samuel3/CraftTab",
   "background": {
     "service_worker": "scripts/background/main.js"
   },
@@ -23,7 +23,7 @@
     "16": "images/icon-16x16.png",
     "32": "images/icon-32x32.png",
     "48": "images/icon-48x48.png",
-    "128": "images/icon-128x128.png"
+    "128": "images/icon-128x128.png",
     "512": "images/icon-512x512.png"
   },
   "devtools_page": "devtools.html",
