--- a/package.json
+++ b/package.json
@@ -12,40 +12,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "19.2.13",
-    "@angular/cdk": "^19.2.18",
-    "@angular/common": "19.2.13",
-    "@angular/compiler": "19.2.13",
-    "@angular/core": "19.2.13",
-    "@angular/forms": "19.2.13",
-    "@angular/material": "19.2.18",
-    "@angular/platform-browser": "19.2.13",
-    "@angular/platform-browser-dynamic": "19.2.13",
-    "@angular/router": "19.2.13",
+    "@angular/animations": "20.0.5",
+    "@angular/cdk": "20.0.4",
+    "@angular/common": "20.0.5",
+    "@angular/compiler": "20.0.5",
+    "@angular/core": "20.0.5",
+    "@angular/forms": "20.0.5",
+    "@angular/material": "20.0.4",
+    "@angular/platform-browser": "20.0.5",
+    "@angular/platform-browser-dynamic": "20.0.5",
+    "@angular/router": "20.0.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.2.14",
-    "@angular-devkit/core": "19.2.9",
-    "@angular-devkit/schematics": "19.2.9",
-    "@angular-eslint/eslint-plugin": "17.3.0",
-    "@angular-eslint/eslint-plugin-template": "17.3.0",
-    "@angular-eslint/template-parser": "17.3.0",
+    "@angular-devkit/build-angular": "20.0.4",
+    "@angular-devkit/core": "20.0.4",
+    "@angular-devkit/schematics": "20.0.4",
+    "@angular-eslint/eslint-plugin": "20.0.0",
+    "@angular-eslint/eslint-plugin-template": "20.0.0",
+    "@angular-eslint/template-parser": "20.0.0",
     "@angular/cli": "~16.2.0",
-    "@angular/compiler-cli": "19.2.13",
-    "@angular/language-service": "19.2.13",
+    "@angular/compiler-cli": "20.0.5",
+    "@angular/language-service": "20.0.5",
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
-    "@nx/angular": "21.1.2",
-    "@nx/eslint-plugin": "^21.1.2",
-    "@nx/jest": "21.1.1",
-    "@nx/js": "21.1.1",
-    "@nx/web": "21.1.1",
-    "@nx/webpack": "21.1.1",
-    "@nx/workspace": "21.1.1",
-    "@schematics/angular": "19.2.9",
+    "@nx/angular": "21.2.1",
+    "@nx/eslint-plugin": "21.2.1",
+    "@nx/jest": "21.2.1",
+    "@nx/js": "21.2.1",
+    "@nx/web": "21.2.1",
+    "@nx/webpack": "21.2.1",
+    "@nx/workspace": "21.2.1",
+    "@schematics/angular": "20.0.4",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@types/chrome": "^0.0.246",
     "@types/jest": "29.5.14",
@@ -60,10 +60,10 @@
     "husky": "^9.1.7",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "jest-preset-angular": "14.5.5",
+    "jest-preset-angular": "14.6.0",
     "jsonc-eslint-parser": "^2.4.0",
     "lint-staged": "^14.0.1",
-    "nx": "21.1.1",
+    "nx": "21.2.1",
     "prettier": "^3.5.3",
     "prettier-plugin-organize-attributes": "^1.0.0",
     "prettier-plugin-rational-order": "^1.0.3",
